update summary statistics

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "e9bd1736",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "3b1d6ce4",
    "metadata": {},
    "outputs": [
@@ -163,22 +163,90 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "             likes      comments        shares  Total_Engagement\n",
-      "count  10000.00000  10000.000000  10000.000000      10000.000000\n",
-      "mean    7033.26920    879.232800    602.262700       8514.764700\n",
-      "std     5673.59828    812.409438    597.573391       6898.648386\n",
-      "min       35.00000      3.000000      2.000000         43.000000\n",
-      "25%     2513.75000    275.000000    170.000000       3029.750000\n",
-      "50%     5580.50000    635.000000    406.000000       6732.000000\n",
-      "75%    10276.50000   1228.000000    837.000000      12391.250000\n",
-      "max    29486.00000   5435.000000   3861.000000      38270.000000\n"
+      "Total Engagement Summary\n",
+      "count    10000.000000\n",
+      "mean      8514.764700\n",
+      "std       6898.648386\n",
+      "min         43.000000\n",
+      "25%       3029.750000\n",
+      "50%       6732.000000\n",
+      "75%      12391.250000\n",
+      "max      38270.000000\n",
+      "Name: Total_Engagement, dtype: float64 \n",
+      "\n",
+      "Summary by Post Type\n",
+      "            count         mean          std   min      25%     50%       75%  \\\n",
+      "post_type                                                                      \n",
+      "Image      3370.0  8591.758160  6871.566533  43.0  3120.25  6921.0  12509.75   \n",
+      "Text       3297.0  8402.726721  6881.958900  84.0  2982.00  6591.0  12344.00   \n",
+      "Video      3333.0  8547.744374  6942.980767  60.0  2990.00  6780.0  12317.00   \n",
+      "\n",
+      "               max  \n",
+      "post_type           \n",
+      "Image      36004.0  \n",
+      "Text       38270.0  \n",
+      "Video      34311.0   \n",
+      "\n",
+      "Summary by Platform\n",
+      "            count          mean          std   min      25%     50%      75%  \\\n",
+      "platform                                                                       \n",
+      "Facebook   3299.0   8593.683844  6675.844592  60.0  3162.50  7032.0  12732.5   \n",
+      "Instagram  3354.0  10246.841383  8001.490542  87.0  3644.25  8077.0  15372.0   \n",
+      "Twitter    3347.0   6701.278160  5275.496091  43.0  2395.50  5466.0   9862.5   \n",
+      "\n",
+      "               max  \n",
+      "platform            \n",
+      "Facebook   31293.0  \n",
+      "Instagram  38270.0  \n",
+      "Twitter    25738.0   \n",
+      "\n",
+      "Summary by Platform and Content Type\n",
+      "                      count          mean          std    min      25%  \\\n",
+      "platform  post_type                                                      \n",
+      "Facebook  Image      1116.0   8884.993728  6628.483853  108.0  3478.25   \n",
+      "          Text       1090.0   8431.325688  6718.592280  115.0  3050.00   \n",
+      "          Video      1093.0   8458.156450  6677.534612   60.0  2956.00   \n",
+      "Instagram Image      1117.0  10273.122650  8002.942517   93.0  3660.00   \n",
+      "          Text       1108.0  10048.198556  7975.231456   87.0  3580.75   \n",
+      "          Video      1129.0  10415.787422  8028.579563   98.0  3725.00   \n",
+      "Twitter   Image      1137.0   6652.149516  5230.733056   43.0  2224.00   \n",
+      "          Text       1099.0   6715.414923  5262.369289   84.0  2456.50   \n",
+      "          Video      1111.0   6737.572457  5338.085385   61.0  2508.00   \n",
+      "\n",
+      "                        50%      75%      max  \n",
+      "platform  post_type                            \n",
+      "Facebook  Image      7352.0  13077.0  30719.0  \n",
+      "          Text       6690.0  12736.0  30335.0  \n",
+      "          Video      7022.0  12472.0  31293.0  \n",
+      "Instagram Image      8078.0  15581.0  36004.0  \n",
+      "          Text       7670.5  14924.0  38270.0  \n",
+      "          Video      8565.0  15653.0  34311.0  \n",
+      "Twitter   Image      5399.0  10010.0  24753.0  \n",
+      "          Text       5466.0   9899.5  24078.0  \n",
+      "          Video      5562.0   9578.5  25738.0   \n",
+      "\n"
      ]
     }
    ],
    "source": [
     "#exploratory data analysis\n",
-    "#summary statistics for numeric columns\n",
-    "print(df[['likes', 'comments', 'shares', 'Total_Engagement']].describe())\n"
+    "# Overall summary\n",
+    "\n",
+    "print(\"Total Engagement Summary\")\n",
+    "print(df['Total_Engagement'].describe(), \"\\n\")\n",
+    "\n",
+    "print(\"Summary by Post Type\")\n",
+    "content_summary = df.groupby('post_type')['Total_Engagement'].describe()\n",
+    "print(content_summary, \"\\n\")\n",
+    "\n",
+    "print(\"Summary by Platform\")\n",
+    "platform_summary = df.groupby('platform')['Total_Engagement'].describe()\n",
+    "print(platform_summary, \"\\n\")\n",
+    "\n",
+    "print(\"Summary by Platform and Content Type\")\n",
+    "overall_summary = df.groupby(['platform','post_type'])['Total_Engagement'].describe()\n",
+    "print(overall_summary, \"\\n\")\n",
+    "\n"
    ]
   },
   {
